# chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.c  board.h  main.c
Analysis/: boardScore.c  boardScore.h  minMax.c  minMax.h  piecePositionEval.c  piecePositionEval.h
Game/: arrows.c  arrows.h  board.c  board.h  draw.c  draw.h  gameInstance.c  gameInstance.h  moveList.c  moveList.h  moves.c  moves.h  update.c  update.h  updateBoard.c  updateBoard.h
Graphics/: arrows.h  draw.c  draw.h  evaluationBar.c  evaluationBar.h  guiGrid.c  guiGrid.h
Systems/: arrayFunc.c  arrayFunc.h  bot.c  bot.h
